--- a/css/sass/_modal.sass
+++ b/css/sass/_modal.sass
@@ -2,7 +2,6 @@
     position: absolute
     right: 77px
     width: 632px
-    height: 450px   
     &_number
         border: 1px solid #929292
         border-radius: 50%
@@ -32,6 +31,10 @@
         justify-content: space-around
         font-weight: 400 
         color: #929292
+.extendet
+          height: 450px 
+.contracted
+        height: 390px 
 p.modal_line
     height: 1px
     width: 515px
@@ -71,6 +74,7 @@ p.modal_line
         font-weight: 600
         font-size: 16px
         color: #582D7F
+        cursor: pointer
     &_next
         width: 260px
         height: 55px
@@ -79,6 +83,7 @@ p.modal_line
         font-weight: 600
         font-size: 16px
         border-radius: 10px
+        cursor: pointer
 .form-section1
     width: 632px
     height: 120px
@@ -89,7 +94,8 @@ p.modal_line
         display: flex
         justify-content: space-around
         padding-top: 42px
-        padding-bottom: 35px
+        padding-bottom: 24px
+       
     &_input-bottom
         width: 405px
         height: 55px
@@ -113,25 +119,33 @@ p.modal_line
     &_input1
         width: 576px
         height: 55px 
+        border: 1px solid #C4C4C4
+        font-weight: 400
+        font-size: 16px
+        color: #979797
+        box-sizing: border-box
+        padding-left: 20px
     &_input2
         width: 260px
         height: 55px
+        border: 1px solid #C4C4C4
+        font-weight: 400
+        font-size: 16px
+        color: #979797
+        box-sizing: border-box
+        padding-left: 20px
     &_span
         display: flex
         justify-content: space-around
         margin-top: -10px
         margin-bottom: 35px
 p.form-section3_p
-    
         text-align: center
-
 .section-hide
     display: none
     position: relative
     right: -120%
     top: -30%
-
-
 button.form_button-submit
     width: 280px
     height: 55px
@@ -147,5 +161,3 @@ button.form_button-submit
 .number-active
     background-color: #582D7F
     color: #fff
-.dorin
-    display: flex
