--- a/css/sass/_modal.sass
+++ b/css/sass/_modal.sass
@@ -64,7 +64,13 @@ p.modal_line
         background-position: 90% 50%
     &_button
         text-align: center
-.form-section
+        padding-top: 10px
+.form-section1
+    width: 632px
+    height: 120px
+.form-section2
+    width: 632px
+    height: 120px
     &_back
         width: 260px
         height: 55px
@@ -84,12 +90,6 @@ p.modal_line
         font-size: 16px
         border-radius: 10px
         cursor: pointer
-.form-section1
-    width: 632px
-    height: 120px
-.form-section2
-    width: 632px
-    height: 120px
     &_input
         display: flex
         justify-content: space-around
@@ -116,6 +116,25 @@ p.modal_line
 .form-section3
     width: 632px
     height: 120px
+    &_back
+        width: 260px
+        height: 55px
+        background-color: #fff
+        border: 2px solid #582D7F
+        border-radius: 10px
+        font-weight: 600
+        font-size: 16px
+        color: #582D7F
+        cursor: pointer
+    &_next
+        width: 260px
+        height: 55px
+        background-color: #582D7F
+        color: #fff
+        font-weight: 600
+        font-size: 16px
+        border-radius: 10px
+        cursor: pointer
     &_input1
         width: 576px
         height: 55px 
