--- a/css/sass/_modal.sass
+++ b/css/sass/_modal.sass
@@ -31,18 +31,30 @@
         justify-content: space-around
         font-weight: 400 
         color: #929292
+    &_line
+        display: flex
 .extendet
           height: 450px 
 .contracted
         height: 390px 
-p.modal_line
-    height: 1px
-    width: 515px
+p.modal_line1
+    height: 2px
+    width: 266px
     background-color: #929292
     margin: 0
     padding: 0
     border: 0
     margin-left: 55px
+p.modal_line2
+    height: 2px
+    width: 266px
+    margin: 0
+    padding: 0
+    border: 0
+p.line-active
+    background-color: #582D7F
+p.line-disable
+    background-color: #929292
 .form
     position: relative
     display: flex
