--- a/css/sass/_menu.sass
+++ b/css/sass/_menu.sass
@@ -1,9 +1,21 @@
 .menu
-    padding-top: 13px
-    border-top: 1px solid #DCDCDC
-    padding-bottom: 13px
     &_link
         color: #929292
         font-weight: 500
         font-size: 16px
         line-height: 150%
+.border-top
+    border-top: 1px solid #DCDCDC
+button.request-call
+    padding: 15px 25px
+    border: 1px solid #CDCDCD
+    background: transparent
+    cursor: pointer
+    color: #582D7F
+    font-weight: 600
+    font-size: 16px
+button.request-call:hover
+    color: #CDCDCD
+    background-color: #582D7F
+ul.menu li:hover
+    text-decoration: underline #CDCDCD
