--- a/css/sass/_modal.sass
+++ b/css/sass/_modal.sass
@@ -120,11 +120,28 @@ p.line-disable
     &_input-text
         width: 106px
         height: 34px
+        display: none
+        visibility: none
     &_buttons
         display: flex
         justify-content: space-around
-    &_back
-    &_next
+    &_label1
+        cursor: pointer
+        display: flex
+        align-items: center
+    &_img
+        width: 22px
+        height: 30px
+    &_label
+        display: flex
+        align-items: center
+
+
+span.form-section2_label-span
+        font-weight: 400
+        font-size: 14px
+        padding-left: 10px
+        display: block
 .form-section3
     width: 632px
     height: 120px
