--- a/css/sass/_modal.sass
+++ b/css/sass/_modal.sass
@@ -135,12 +135,13 @@ p.line-disable
     &_label
         display: flex
         align-items: center
+        width: 100px
 
 
 span.form-section2_label-span
         font-weight: 400
         font-size: 14px
-        padding-left: 10px
+        padding-left: 15px
         display: block
 .form-section3
     width: 632px
