--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -495,12 +495,13 @@ p.line-disable {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100px;
 }
 
 span.form-section2_label-span {
   font-weight: 400;
   font-size: 14px;
-  padding-left: 10px;
+  padding-left: 15px;
   display: block;
 }
 
