--- a/css/sass/_modal.sass
+++ b/css/sass/_modal.sass
@@ -2,6 +2,7 @@
     position: absolute
     right: 77px
     width: 632px
+    transition: all 0.3s ease 0s
     &_number
         border: 1px solid #929292
         border-radius: 50%
@@ -12,6 +13,7 @@
         display: flex
         margin-top: -17px
         color: #929292
+        transition: all 0.3s ease 0s
     &_number span
         margin: auto
         font-size: 18px
@@ -45,12 +47,14 @@ p.modal_line1
     padding: 0
     border: 0
     margin-left: 55px
+    transition: all 0.3s ease 0s
 p.modal_line2
     height: 2px
     width: 266px
     margin: 0
     padding: 0
     border: 0
+    transition: all 0.3s ease 0s
 p.line-active
     background-color: #582D7F
 p.line-disable
@@ -136,8 +140,6 @@ p.line-disable
         display: flex
         align-items: center
         width: 100px
-
-
 span.form-section2_label-span
         font-weight: 400
         font-size: 14px
