--- a/css/sass/_menu.sass
+++ b/css/sass/_menu.sass
@@ -14,6 +14,7 @@ button.request-call
     color: #582D7F
     font-weight: 600
     font-size: 16px
+    transition: all 0.3s ease 0s
 button.request-call:hover
     color: #CDCDCD
     background-color: #582D7F
