--- a/css/sass/_services.sass
+++ b/css/sass/_services.sass
@@ -1,16 +1,40 @@
 .services
-    margin-top: 200px
+    margin: 200px 0px 30px 0px  
+    
     &_our-services
         font-weight: 400
         font-size: 48px
     &_top-section
         margin-top: 55px
-    &_personal-documents
-       
+    &_titleH4
+        padding-left: 23px
+        font-weight: 500
+        font-size: 18px
+    &_leave-request
+       color: #582D7F
+       font-weight: 600
+       font-size: 18px
+       cursor: pointer
+       transition: all 0.3s ease 0s
+       display: block
+       padding: 35px 0px 20px 23px 
+
+    &_request-container
+        height: 100px 
+    &_leave-request:hover
+        font-size: 20px    
+        
 .shadow
-     box-shadow: 1px 5px 5px 1px #b2afaf
-     border-radius: 10px 10px 0px 0px
+     box-shadow: 1px 2px 7px 1px #b2afaf
+     border-radius: 10px
      background-color: #fff
+.shadow p 
+    padding: 30px 0px 20px 0px
+ul.services_ul
+    padding-left: 23px
 ul.services_ul li
     list-style-type: disclosure-closed 
     list-style-position: inside
+    font-weight: 300
+    font-size: 14px
+    padding-top: 5px
