--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -131,6 +131,8 @@ button.request-call {
   color: #582D7F;
   font-weight: 600;
   font-size: 16px;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 button.request-call:hover {
@@ -277,6 +279,8 @@ h1.section_top-left-top {
   position: absolute;
   right: 77px;
   width: 632px;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 .modal_number {
@@ -291,6 +295,8 @@ h1.section_top-left-top {
   display: flex;
   margin-top: -17px;
   color: #929292;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 .modal_number span {
@@ -349,6 +355,8 @@ p.modal_line1 {
   padding: 0;
   border: 0;
   margin-left: 55px;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 p.modal_line2 {
@@ -357,6 +365,8 @@ p.modal_line2 {
   margin: 0;
   padding: 0;
   border: 0;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 p.line-active {
@@ -600,7 +610,7 @@ button.form_button-submit {
 }
 
 .services {
-  margin-top: 200px;
+  margin: 200px 0px 30px 0px;
 }
 
 .services_our-services {
@@ -612,15 +622,51 @@ button.form_button-submit {
   margin-top: 55px;
 }
 
+.services_titleH4 {
+  padding-left: 23px;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.services_leave-request {
+  color: #582D7F;
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  display: block;
+  padding: 35px 0px 20px 23px;
+}
+
+.services_request-container {
+  height: 100px;
+}
+
+.services_leave-request:hover {
+  font-size: 20px;
+}
+
 .shadow {
-  -webkit-box-shadow: 1px 5px 5px 1px #b2afaf;
-          box-shadow: 1px 5px 5px 1px #b2afaf;
-  border-radius: 10px 10px 0px 0px;
+  -webkit-box-shadow: 1px 2px 7px 1px #b2afaf;
+          box-shadow: 1px 2px 7px 1px #b2afaf;
+  border-radius: 10px;
   background-color: #fff;
+}
+
+.shadow p {
+  padding: 30px 0px 20px 0px;
+}
+
+ul.services_ul {
+  padding-left: 23px;
 }
 
 ul.services_ul li {
   list-style-type: disclosure-closed;
   list-style-position: inside;
+  font-weight: 300;
+  font-size: 14px;
+  padding-top: 5px;
 }
 /*# sourceMappingURL=style1.css.map */
