--- a/css/sass/_services.sass
+++ b/css/sass/_services.sass
@@ -1,5 +1,5 @@
 .services
-    margin: 200px 0px 30px 0px  
+    margin: 120px 0px 30px 0px  
     
     &_our-services
         font-weight: 400
@@ -38,3 +38,24 @@ ul.services_ul li
     font-weight: 300
     font-size: 14px
     padding-top: 5px
+.aditional-services
+    &_section
+        margin: 70px 0px
+        width: 100%
+    &_title
+        font-weight: 400
+        font-size: 48px
+    &_section-bottom
+            display: flex
+            justify-content: space-between
+            align-items: center
+            padding-right: 17%
+            padding-top: 20px
+            margin: 40px
+    &_subsection
+        display: flex
+        align-items: center
+    &_subsection img
+        margin-right: 20px
+
+            
