--- a/css/sass/_OurCompany.sass
+++ b/css/sass/_OurCompany.sass
@@ -4,4 +4,24 @@
     &_image
         background: url(/img/countries.png)
         background-repeat: no-repeat
-        background-position: 95% 100px
+        background-position: 85% 100px
+    &_right
+        padding-top: 180px
+    &_left
+       display: flex
+       flex-direction: column
+       align-self: flex-end
+       padding-bottom: 5px
+    &_right span
+        display: block
+        margin-bottom: 20px
+        text-align: center
+    &_right img 
+        border-radius: 15px
+    &_experience
+        box-sizing: border-box
+        width: 489px
+        height: 168px
+        border: 1px dashed #582D7F
+        border-radius: 10px
+
