--- a/css/sass/_OurCompany.sass
+++ b/css/sass/_OurCompany.sass
@@ -12,10 +12,16 @@
        flex-direction: column
        align-self: flex-end
        padding-bottom: 5px
+    &_left h2
+        font-weight: 400
+        font-size: 48px
+        margin: 0px 0px 90px
     &_right span
         display: block
         margin-bottom: 20px
         text-align: center
+        font-weight: 400
+        font-size: 18
     &_right img 
         border-radius: 15px
     &_experience
