--- a/css/sass/_services.sass
+++ b/css/sass/_services.sass
@@ -51,7 +51,7 @@ ul.services_ul li
             align-items: center
             padding-right: 17%
             padding-top: 20px
-            margin: 40px
+            margin: 40px 0px 
     &_subsection
         display: flex
         align-items: center
