--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -692,7 +692,7 @@ ul.services_ul li {
           align-items: center;
   padding-right: 17%;
   padding-top: 20px;
-  margin: 40px;
+  margin: 40px 0px;
 }
 
 .aditional-services_subsection {
