--- a/css/sass/_AdvantageSection.sass
+++ b/css/sass/_AdvantageSection.sass
@@ -10,5 +10,13 @@
         display: flex
     &_description
         margin-left: 30px
+    &_description h4
+        font-weight: 500
+        font-size: 18px
+    &_description p 
+        font-weight: 300
+        font-size: 14px
 .advantage-section h2
     margin: 120px 77px 70px 77px 
+    font-weight: 400
+    font-size: 48px
