--- a/css/sass/_OurCompany.sass
+++ b/css/sass/_OurCompany.sass
@@ -1,6 +1,7 @@
 .our-company
     height: 827px
     background-color: #fff
+    border-radius: 30px 0px
     &_image
         background: url(/img/countries.png)
         background-repeat: no-repeat
