--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -711,6 +711,7 @@ ul.services_ul li {
 .our-company {
   height: 827px;
   background-color: #fff;
+  border-radius: 30px 0px;
 }
 
 .our-company_image {
@@ -793,7 +794,19 @@ ul.services_ul li {
   margin-left: 30px;
 }
 
+.advantage-section_description h4 {
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.advantage-section_description p {
+  font-weight: 300;
+  font-size: 14px;
+}
+
 .advantage-section h2 {
   margin: 120px 77px 70px 77px;
+  font-weight: 400;
+  font-size: 48px;
 }
 /*# sourceMappingURL=style1.css.map */
