--- a/css/sass/_services.sass
+++ b/css/sass/_services.sass
@@ -47,14 +47,16 @@ ul.services_ul li
         font-size: 48px
     &_section-bottom
             display: flex
-            justify-content: space-between
-            align-items: center
-            padding-right: 17%
-            padding-top: 20px
-            margin: 40px 0px 
+            flex-direction: column
+            justify-content: space-between    
+    &_section-flex
+        display: flex
+        justify-content: space-between
+        padding-top: 20px  
     &_subsection
         display: flex
         align-items: center
+        padding-bottom: 40px
     &_subsection img
         margin-right: 20px
 
