--- a/css/sass/_orderTranslation.sass
+++ b/css/sass/_orderTranslation.sass
@@ -21,33 +21,69 @@
     &_numbers
         display: flex
         justify-content: space-between
+        align-items: center
     &_span
         height: 1px
         width: 160px
         background-color: #fff
-    &_border
+    &_border1
+        display: flex;
+        align-items: center
         border: 1px solid #fff
         border-radius: 50%
         width: 60px
         height: 60px
-        text-align: center
-    &_border span
+        margin: auto
+        display: none
+    &_border
+        display: flex;
+        align-items: center
+        border: 1px solid #fff
+        border-radius: 50%
+        width: 75px
+        height: 75px
+    &_border-content
+        position: relative
+    &_border-content span
+        position: absolute
         font-weight: 600
         font-size: 24px
         color: #fff
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
     &_description
         display: flex
         justify-content: space-between
+        margin: 20px 0px 0px 0px 
     &_description span
         color: #fff
         font-weight: 600
         font-size: 19px
+    &_description1
+        text-align: right
+    &_button-section
+        height: 70px
+        text-align: center
+        display: flex
+        align-items: center
     &_button
-        width: 1163px
+        width: 1190px
         height: 53px
         background-color: #fff
-        margin-left: 43px
         border-radius: 10px
         font-weight: 600
         font-size: 18px
         cursor: pointer
+        padding: 0px
+        margin: auto
+        transition: all 0.3s ease 0s
+    &_button:hover
+        width: 1200px
+        height: 60px
+        font-size: 20px
+span.order-translation-number-active
+    color: #582D7F
+.border1-active
+    display: block
+    background-color: #fff
