--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -860,6 +860,9 @@ ul.services_ul li {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .order-translation_span {
@@ -868,18 +871,47 @@ ul.services_ul li {
   background-color: #fff;
 }
 
-.order-translation_border {
+.order-translation_border1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: 1px solid #fff;
   border-radius: 50%;
   width: 60px;
   height: 60px;
-  text-align: center;
+  margin: auto;
+  display: none;
 }
 
-.order-translation_border span {
+.order-translation_border {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+}
+
+.order-translation_border-content {
+  position: relative;
+}
+
+.order-translation_border-content span {
+  position: absolute;
   font-weight: 600;
   font-size: 24px;
   color: #fff;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .order-translation_description {
@@ -889,6 +921,7 @@ ul.services_ul li {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin: 20px 0px 0px 0px;
 }
 
 .order-translation_description span {
@@ -897,14 +930,47 @@ ul.services_ul li {
   font-size: 19px;
 }
 
+.order-translation_description1 {
+  text-align: right;
+}
+
+.order-translation_button-section {
+  height: 70px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .order-translation_button {
-  width: 1163px;
+  width: 1190px;
   height: 53px;
   background-color: #fff;
-  margin-left: 43px;
   border-radius: 10px;
   font-weight: 600;
   font-size: 18px;
   cursor: pointer;
+  padding: 0px;
+  margin: auto;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.order-translation_button:hover {
+  width: 1200px;
+  height: 60px;
+  font-size: 20px;
+}
+
+span.order-translation-number-active {
+  color: #582D7F;
+}
+
+.border1-active {
+  display: block;
+  background-color: #fff;
 }
 /*# sourceMappingURL=style1.css.map */
