--- a/css/sass/_Slider.sass
+++ b/css/sass/_Slider.sass
@@ -10,7 +10,6 @@
         height: 100%
         display: flex
         justify-content: center 
-        overflow: hidden
         padding: 70px 0px 115px 0px 
         flex 
     &_image
@@ -20,6 +19,13 @@
     &_image img
         padding-left: 20px
         border-radius: 20px
+        overflow: hidden
+img.slider_image4
+    display: none
+img.slider_image5
+    display: none
+img.slider_image6
+    display: none   
 button.slider_button1
     position: absolute
     left: 0px
