--- a/css/sass/_Slider.sass
+++ b/css/sass/_Slider.sass
@@ -1,6 +1,7 @@
 .slider
     height: 500px
     display: block
+    margin-bottom: 300px
     &_title h2 
         font-weight: 400
         font-size: 48px
