--- a/css/sass/_table.sass
+++ b/css/sass/_table.sass
@@ -23,14 +23,22 @@ table, td
   border-collapse: collapse
   height: 60px
   text-align: left
+  border-radius: 20px
 th
     height: 70px
+    text-align: center
+    font-weight: 400
+th.th1 
+    text-align: left
     padding-left: 50px
 td.td1
     text-align: left
     padding-left: 50px
+    font-weight: 300
 td 
     text-align: center
+    font-weight: 500
+    font-size: 20px
 th.th1
     background-color: #B8DDDE
 th.th2
@@ -41,5 +49,6 @@ th.th4
     background-color: #D1D7FA   
 table
     width: 100%
+    
 
 
