--- a/css/sass/_table.sass
+++ b/css/sass/_table.sass
@@ -2,6 +2,7 @@
     height: 1020px
     background-color: #fff
     border-radius: 20px 20px 0px 0px
+    margin-bottom: 110px
     &_section
         display: flex
         padding-top: 100px
@@ -13,11 +14,11 @@
     &_section-all h2
         font-weight: 400
         font-size: 48px
-        padding-bottom: 
+        padding-bottom: 50px
     &_table-section-table
         width: 1286px
         height: 475px
-
+    
 table, td 
   border: 1px solid #E1E1E1
   border-collapse: collapse
@@ -49,6 +50,18 @@ th.th4
     background-color: #D1D7FA   
 table
     width: 100%
+.tarifs-button
+    text-align: center
+button.tarifs-button
+    margin-top: 100px
+    width: 1286px
+    height: 50px
+    background-color: #582D7F
+    color: #fff 
+    font-weight: 600
+    font-size: 16px
+    cursor: pointer
+
     
 
 
