--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -1220,6 +1220,17 @@ p.question-answers_description-bottom {
   line-height: 30px;
   font-weight: 300;
   font-size: 18px;
+}
+
+p.description-disable {
+  display: none;
+}
+
+button.question-active {
+  display: block;
+}
+
+button.question-disable {
   display: none;
 }
 /*# sourceMappingURL=style1.css.map */
