--- a/css/sass/_question.sass
+++ b/css/sass/_question.sass
@@ -58,6 +58,11 @@ p.question-answers_description-bottom
     line-height: 30px
     font-weight: 300
     font-size: 18px
+p.description-disable
+    display: none
+button.question-active
+    display: block
+button.question-disable
     display: none
 
 
