--- a/css/sass/_question.sass
+++ b/css/sass/_question.sass
@@ -18,7 +18,7 @@
     &_description 
         display: flex 
         justify-content: space-between
-        padding-right: 20px  
+        padding-right: 40px  
         
     &_image
         position: relative
@@ -67,6 +67,7 @@ p.description-active
 button.question-active
     display: block
 button.question-disable
-    display: none
+.question-padding
+    margin-bottom: 60px
 
 
