--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -1250,4 +1250,17 @@ button.question-active {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
+.cost-calculation {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 100px;
+}
+
+.cost-calculation_section {
+  width: 1286px;
+  height: 750px;
+  background-color: #fff;
+}
 /*# sourceMappingURL=style1.css.map */
