--- a/css/sass/_question.sass
+++ b/css/sass/_question.sass
@@ -30,6 +30,7 @@
     &_description-detailed p
         font-weight: 600
         font-size: 22px
+        cursor: pointer
 
 button.question-open
     position: absolute
@@ -69,5 +70,6 @@ button.question-active
 button.question-disable
 .question-padding
     margin-bottom: 60px
+
 
 
