--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -1161,6 +1161,8 @@ button.tarifs-button {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-right: 40px;
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .questions-answers_image {
@@ -1227,13 +1229,14 @@ p.question-answers_description-bottom1 {
 }
 
 p.description-disable {
-  display: none;
+  opacity: 0;
+  max-height: 0;
 }
 
 p.description-active {
-  display: block;
   -webkit-transform: translate(0px, 15px);
           transform: translate(0px, 15px);
+  opacity: 1;
 }
 
 button.question-active {
