--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -1267,4 +1267,81 @@ button.question-active {
   height: 750px;
   background-color: #fff;
 }
+
+.footer-background {
+  background-color: #fff;
+}
+
+.footer {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.column1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.column1_logo {
+  padding: 20px 0px;
+}
+
+.column1_logo-description {
+  margin-bottom: 40px;
+  font-weight: 400;
+  color: #9E9E9E;
+  font-size: 16px;
+}
+
+.column1_contact {
+  font-weight: 600;
+  font-size: 16;
+  color: #582D7F;
+  padding-bottom: 20px;
+}
+
+.column1_buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.column1_buttons button {
+  margin: 10px;
+  width: 260px;
+  height: 54px;
+  font-weight: 500;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.column1_buttons button img {
+  margin-right: 15px;
+}
+
+.column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.column h4 {
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: uppercase;
+}
 /*# sourceMappingURL=style1.css.map */
