--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -27,6 +27,8 @@
         font-weight: 500
         font-size: 14px
         cursor: pointer
+    &_buttons button:hover
+        text-decoration: underline
     &_buttons button img
         margin-right: 15px
 .column
@@ -36,3 +38,31 @@
     font-weight: 700
     font-size: 20px
     text-transform: uppercase
+.column ul li a
+    font-weight: 400 
+    font-size: 16px
+    margin: 10px 0px 
+    cursor: pointer
+.column ul li:hover
+    text-decoration: underline
+.column4
+    &_tel
+        margin: 20px 0px 
+    &_tel a 
+        font-weight: 600
+        font-size: 18px
+        color: #582D7F
+    &_tel a:hover
+        text-decoration: underline
+    &_email
+        margin: 20px 0px
+    &_email a
+        font-weight: 500
+        font-size: 18px
+        color: #686868
+    &_email a:hover
+        text-decoration: underline
+    &_adress strong 
+        color: #582D7F
+        margin: 0px 10px 0px 0px    
+
