--- a/css/sass/_question.sass
+++ b/css/sass/_question.sass
@@ -4,6 +4,7 @@
         width: 1286px
         background-color: #fff 
         padding-left: 70px
+        transition: all 0.3s ease 0s
     &_wallpaper h2
         font-weight: 400
         font-size: 48px 
