--- a/css/sass/_costCalculation.sass
+++ b/css/sass/_costCalculation.sass
@@ -1,7 +1,29 @@
 .cost-calculation
     justify-content: center
     margin-bottom: 100px
+    background-color: #fff
     &_section
         width: 1286px
         height: 750px
-        background-color: #fff
+        box-sizing: border-box
+        padding: 0px 63px
+    &_section h2 
+        font-weight: 400
+        font-size: 48px
+        padding-bottom: 40px
+        padding-top: 20px
+
+
+
+
+span.cost-calculation-line
+    height: 1px 
+    background-color: #C4C4C4
+    width: 610px
+.calculation-description
+    justify-content: space-between
+    margin: 30px 0px
+.calculation-steps
+    margin: 0
+.cost   
+    width: 37px
