--- a/css/sass/_costCalculation.sass
+++ b/css/sass/_costCalculation.sass
@@ -12,7 +12,16 @@
         font-size: 48px
         padding-bottom: 40px
         padding-top: 20px
-
+    &_language span
+        font-weight: 400
+        font-size: 20px 
+    &_select
+        display: flex
+        margin: 30px 0px    
+        align-items: center
+    &_language
+        padding: 20px 0px 
+        
 
 
 
@@ -27,3 +36,9 @@ span.cost-calculation-line
     margin: 0
 .cost   
     width: 37px
+select.cost-select
+    border: 1px #000 solid
+    border-radius: 0px
+.cost-arrow img
+    margin: 0px 20px
+    
