--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -1280,6 +1280,25 @@ button.question-active {
   padding-top: 20px;
 }
 
+.cost-calculation_language span {
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.cost-calculation_select {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 30px 0px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cost-calculation_language {
+  padding: 20px 0px;
+}
+
 span.cost-calculation-line {
   height: 1px;
   background-color: #C4C4C4;
@@ -1299,6 +1318,15 @@ span.cost-calculation-line {
 
 .cost {
   width: 37px;
+}
+
+select.cost-select {
+  border: 1px #000 solid;
+  border-radius: 0px;
+}
+
+.cost-arrow img {
+  margin: 0px 20px;
 }
 
 .footer-background {
