--- a/css/sass/_costCalculation.sass
+++ b/css/sass/_costCalculation.sass
@@ -21,10 +21,8 @@
         align-items: center
     &_language
         padding: 20px 0px 
+    &_buttons
         
-
-
-
 span.cost-calculation-line
     height: 1px 
     background-color: #C4C4C4
@@ -41,4 +39,12 @@ select.cost-select
     border-radius: 0px
 .cost-arrow img
     margin: 0px 20px
+.cost-calculation_description textarea
+    width: 1160px
+    height: 150px
+    border-style: dashed
+    resize: none
+    padding: 15px
+    font-weight: 300
+    font-size: 20px
     
