--- a/css/sass/_costCalculation.sass
+++ b/css/sass/_costCalculation.sass
@@ -22,6 +22,8 @@
     &_language
         padding: 20px 0px 
     &_buttons
+        height: 80px
+        position: relative
         
 span.cost-calculation-line
     height: 1px 
@@ -40,11 +42,23 @@ select.cost-select
 .cost-arrow img
     margin: 0px 20px
 .cost-calculation_description textarea
-    width: 1160px
+    width: 100%
     height: 150px
     border-style: dashed
     resize: none
     padding: 15px
     font-weight: 300
     font-size: 20px
-    
+    box-sizing: border-box
+button.cost-calculation_next
+    position: absolute
+    right: 0
+    top: 30px
+    height: 55px
+    width: 160px
+    border: none
+    background-color: #093B54
+    font-weight: 600
+    font-size: 16px
+    color: #fff
+    cursor: pointer
