--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -1299,6 +1299,11 @@ button.question-active {
   padding: 20px 0px;
 }
 
+.cost-calculation_buttons {
+  height: 80px;
+  position: relative;
+}
+
 span.cost-calculation-line {
   height: 1px;
   background-color: #C4C4C4;
@@ -1330,13 +1335,29 @@ select.cost-select {
 }
 
 .cost-calculation_description textarea {
-  width: 1160px;
+  width: 100%;
   height: 150px;
   border-style: dashed;
   resize: none;
   padding: 15px;
   font-weight: 300;
   font-size: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+button.cost-calculation_next {
+  position: absolute;
+  right: 0;
+  top: 30px;
+  height: 55px;
+  width: 160px;
+  border: none;
+  background-color: #093B54;
+  font-weight: 600;
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
 }
 
 .footer-background {
